syntax = "proto3";

// 논리적 패키지 API 관점
package image.v1;

// Java 옵션 설정
option java_multiple_files = true;
option java_package = "flipnote.image.grpc.v1";  // Java 패키지 경로 설정
option java_outer_classname = "ImageServiceProto";           // 외부 클래스 이름 설정

// gRPC 서비스 정의
service ImageCommandService {
  // 이미지 url 조회
  rpc GetUrlByReference(GetUrlByReferenceRequest) returns (GetUrlByReferenceResponse);
  // 이미지 활성화
  rpc ActivateImage(ActivateImageRequest) returns (ActivateImageResponse);
  // 이미지 변경
  rpc ChangeImage(ChangeImageRequest) returns (ChangeImageResponse);
}

// 요청/응답 메시지
enum Type {
  REFERENCE_TYPE_UNSPECIFIED = 0;
  USER = 1;
  GROUP = 2;
  CARD_SET = 3;
}

message GetUrlByReferenceRequest {
  Type reference_type = 1;
  int64 reference_id = 2;
}

message GetUrlByReferenceResponse {
  string image_url = 1;
}

message ActivateImageRequest {
  int64 image_ref_id = 1;
  Type reference_type = 2;
  int64 reference_id = 3;
}

message ActivateImageResponse {
  //  int64 image_ref_id = 1;
}

message ChangeImageRequest {
  Type reference_type = 1;
  int64 reference_id = 2;
  int64 image_ref_id = 3;
}

message ChangeImageResponse {
  int64 image_ref_id = 1;
  string url = 2;
}
